fixes header pic covering menu icon

--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -10,6 +10,9 @@
   background-repeat: no-repeat;
 
   &--menu {
+    position: relative;
+    z-index: 2;
+
     background-image: url("../images/menu.svg");
 
     &:hover {
